tests/inputs/invalid/types/bad_conditionals/bad_if.crbc
routine main () : integer is 
    var x : integer is 0;

    if 1.2 then 
        print(1);
    end

    if x = 1 then
        print(0);
    end

    return 0;
end